# wc26-match-predictor

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  pipeline.yml
dags/: wc26_pipeline.py
data/seed/: README.md  fifa_rankings.csv  sample_results.csv  sample_shootouts.csv  wc26_groups.csv
data/snapshot/: calibration.json  champion_model.joblib  featurizer.joblib  model_dixon_coles.joblib  model_elo.joblib  model_logistic.joblib  model_xgboost.joblib  snapshot.db
docker/: airflow.Dockerfile  app.Dockerfile
docs/: architecture-export.drawio  architecture-simple.drawio  architecture.drawio
notebooks/: README.md
src/wc26/: __init__.py  config.py  pipeline.py  run_app.py  schema.py  snapshot.py  train.py
src/wc26/api/: __init__.py  app.py
src/wc26/dashboard/: __init__.py  app.py
src/wc26/etl/: __init__.py  load.py  validate.py
src/wc26/evaluate/: __init__.py  cv.py  metrics.py  runner.py
src/wc26/features/: __init__.py  build.py  elo.py  featurizer.py  form.py  h2h.py  rest.py
src/wc26/ingest/: __init__.py  download.py  fixtures.py  football_data.py  sources.py
src/wc26/models/: __init__.py  base.py  elo.py  gbm.py  logistic.py  poisson.py  registry.py
src/wc26/monitor/: __init__.py  drift.py  live.py  run.py
src/wc26/simulate/: __init__.py  bracket.py  montecarlo.py
src/wc26/tracking/: __init__.py  mlflow_utils.py
tests/: conftest.py  test_cv.py  test_dixon_coles.py  test_features.py  test_fixtures.py  test_football_data.py  test_load.py  test_metrics.py  test_models.py  test_monitor.py  test_pipeline.py  test_serving.py  test_simulate.py  test_smoke.py  test_validate.py
