[project]
name = "wc26"
version = "0.1.0"
description = "End-to-end ML/data/DevOps system predicting 2026 FIFA World Cup outcomes and simulating the tournament."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "WC26-Pred" }]

# Runtime + pipeline dependencies. Kept deliberately bounded: team-level modeling, local stack, single deployable app.
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "mlflow>=2.16",
    "evidently>=0.4.40",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.38",
    "pydantic-settings>=2.5",
    "requests>=2.32",
    "pyarrow>=17.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]

# NOTE: Airflow is intentionally NOT a dependency here. It is a LOCAL-only
# orchestration showcase that runs in its own Docker image (docker/airflow.Dockerfile)
# with its own pinned constraints - its SQLAlchemy<2.0 requirement conflicts
# with this modern stack (MLflow + SQLAlchemy 2.0). The DAGs in dags/ are thin
# wrappers that import wc26 functions inside that container; `make pipeline` runs the
# same functions with no Airflow. This keeps the deployable app image slim too.

[dependency-groups]
# uv dev dependency group (PEP 735). Installed by `uv sync`, excluded from the
# app image build.
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wc26"]

# ---------------------------------------------------------------------------
# Tooling configuration (single source of truth - no scattered config files).
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["notebooks"]

[tool.ruff.lint]
# A pragmatic, strict-ish set: pyflakes, pycodestyle, isort, bugbear, pyupgrade,
# comprehensions, simplify. Math-heavy model code can use short names where it
# mirrors the equations (handled per-file below).
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]  # line length enforced by formatter, not the linter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses callables in argument defaults by design (dependency injection).
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=wc26 --cov-report=term-missing"
pythonpath = ["src"]

[tool.coverage.run]
source = ["wc26"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
